[gd_scene load_steps=16 format=3]

[ext_resource type="Script" path="res://Scene/OtherScene/ZhenFaTuPo.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://vgq513gp6o62" path="res://Art/TwentyEightConstellations/41.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bedtranahj6ea" path="res://Art/TwentyEightConstellations/68.png" id="3"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="4"]
[ext_resource type="Texture2D" uid="uid://d1fkj56g6o4p7" path="res://Art/TwentyEightConstellations/69.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b4xse1q0a4c4r" path="res://Art/show_text/daojukuang.png" id="6"]
[ext_resource type="PackedScene" uid="uid://b3qof5s6nwscy" path="res://Scene/BackPack/Box_1.tscn" id="7"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="8"]
[ext_resource type="Texture2D" uid="uid://c5mv67gmws1lg" path="res://Art/TwentyEightConstellations/67.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cttnoilo6uefb" path="res://Art/TwentyEightConstellations/65.png" id="10"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[node name="ZhenFaTuPo" type="Node2D"]
script = ExtResource( "1" )

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 358.0
offset_bottom = 354.0
color = Color(0, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="OldList" type="VBoxContainer" parent="."]
offset_left = 14.0
offset_top = 5.0
offset_right = 351.0
offset_bottom = 137.0
theme_override_constants/separation = 6
metadata/_edit_lock_ = true

[node name="oldpic" type="TextureRect" parent="OldList"]
layout_mode = 2
texture = ExtResource( "2" )
stretch_mode = 2

[node name="sjq" type="Sprite2D" parent="OldList/oldpic"]
position = Vector2(30, 13)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="OldText" type="Label" parent="OldList/oldpic/sjq"]
offset_left = 36.0
offset_top = -9.0
offset_right = 277.0
offset_bottom = 11.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "4" )
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="AddPropOld" type="Label" parent="OldList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 16
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="SkillInfoOld" type="Label" parent="OldList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.435294, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.435294, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 16
vertical_alignment = 1
autowrap_mode = 1
metadata/_edit_lock_ = true

[node name="NewList" type="VBoxContainer" parent="."]
offset_left = 14.0
offset_top = 136.0
offset_right = 351.0
offset_bottom = 268.0
theme_override_constants/separation = 6

[node name="newpic" type="TextureRect" parent="NewList"]
layout_mode = 2
texture = ExtResource( "2" )
stretch_mode = 2

[node name="sjq" type="Sprite2D" parent="NewList/newpic"]
position = Vector2(30, 13)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="NewText" type="Label" parent="NewList/newpic/sjq"]
offset_left = 36.0
offset_top = -9.0
offset_right = 277.0
offset_bottom = 11.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "4" )
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="AddPropNew" type="Label" parent="NewList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 16
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="SkillInfoNew" type="Label" parent="NewList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.435294, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.435294, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 16
vertical_alignment = 1
autowrap_mode = 1
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 46.0
offset_top = 261.0
offset_right = 120.0
offset_bottom = 335.0
texture = ExtResource( "6" )

[node name="Item" parent="TextureRect" instance=ExtResource( "7" )]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 57.0
offset_bottom = 56.0
scale = Vector2(1.22, 1.22)
metadata/_edit_lock_ = true

[node name="Need" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = -47.0
offset_top = 75.0
offset_right = 122.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource( "8" )
text = "30/80"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="tupo" type="Button" parent="."]
offset_left = 211.0
offset_top = 259.0
offset_right = 337.0
offset_bottom = 318.0
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
icon = ExtResource( "9" )
metadata/_edit_lock_ = true

[node name="lh" type="Sprite2D" parent="."]
position = Vector2(273, 335)
texture = ExtResource( "10" )
metadata/_edit_lock_ = true

[node name="needlh" type="Label" parent="lh"]
offset_left = -52.0
offset_top = -10.0
offset_right = 51.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource( "8" )
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[connection signal="pressed" from="tupo" to="." method="_on_tupo_pressed" flags=18]
